2002-09-19  Sam Steingold  <sds@gnu.org>

	* lisparit.d (log_digits): fixed last patch: make sure
	that the saved value is not more precise than it is accurate

2002-09-18  Sam Steingold  <sds@gnu.org>

	* makemake.in: treat floatparam.[ch] just like intparam.[ch]

2002-09-18  Sam Steingold  <sds@gnu.org>

	* m4/fenv_default.m4: fixed AC_DEFINE macro calls

2002-09-18  Sam Steingold  <sds@gnu.org>

	* modules/bindings/linuxlibc6/linux.lisp (NGROUPS_MAX): do not
	redefine the constant based on _POSIX_NGROUPS_MAX

2002-09-18  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (default-foreign-language): avoid a compile-time
	warning by wrapping SETQ *FOREIGN-LANGUAGE* inside a
	WITHOUT-PACKAGE-LOCK macro
	* compiler.lisp (c-form-table, compile-toplevel-form): handle
	WITHOUT-PACKAGE-LOCK specially
	(*compiler-unlocked-packages*): new variable
	(set-check-lock): use it
	(c-WITHOUT-PACKAGE-LOCK): new function, binds
	*COMPILER-UNLOCKED-PACKAGES*

2002-09-18  Will Newton  <will@misconception.org.uk>

	* arihppa.d: syntactic changes to make the GNU assembler happy

2002-09-18  Sam Steingold  <sds@gnu.org>

	do not print QUOTE and FUNCTION specially when that results
	in a dotted list representation
	* io.d (special_list_p): new `dotted_p' argument
	(pr_cons): pass `dotted_p' to special_list_p()

2002-09-17  John  Hinsdale <hin@alma.com>

	* modules/oracle/oracle.lisp: use new FFI calls; many performance
	improvements in low-level functions and macros

2002-09-17  Sam Steingold  <sds@gnu.org>

	* lisparit.d (log_digits): fixed the 2002-09-11 patch:
	give NULL as end_p to R_ln_R() and shorten the result

2002-09-17  Bruno Haible  <bruno@clisp.org>

	* loop.lisp (expand-loop): Warn if a sequence of forms is empty -
	allowed by CLtL2, but invalid according to ANSI CL.

2002-09-14  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-APPLY): check whether FUN is locally defined
	to check signature in (flet ((foo (...) ...)) (apply #'foo ...))